--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -34,8 +34,4 @@
             font-size: u.$font-sm;
         }
     } 
-
-    &__cta {
-        color: u.$white;  
-    }
 }
